fix: remove the scrollbar styling

--- a/packages/uhk-web/src/app/components/xterm/xterm.component.scss
+++ b/packages/uhk-web/src/app/components/xterm/xterm.component.scss
@@ -25,34 +25,6 @@ $scrollbar-radius: 6px;
     left: 0;
     width: 100%;
     height: 100%;
-
-    scrollbar-face-color: $scrollbar-color;
-    scrollbar-shadow-color: $scrollbar-color;
-    scrollbar-highlight-color: $scrollbar-color;
-    scrollbar-3dlight-color: $scrollbar-color;
-    scrollbar-darkshadow-color: $scrollbar-color;
-    scrollbar-track-color: $scrollbar-color;
-    scrollbar-arrow-color: $scrollbar-color;
-
-    /* Let's get this party started */
-    &::-webkit-scrollbar {
-        width: 10px;
-    }
-
-    /* Track */
-    &::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        -webkit-border-radius: $scrollbar-radius;
-        border-radius: $scrollbar-radius;
-    }
-
-    /* Handle */
-    &::-webkit-scrollbar-thumb {
-        -webkit-border-radius: $scrollbar-radius;
-        border-radius: $scrollbar-radius;
-        background: $scrollbar-color;
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    }
 }
 
 .copy-container-wrapper {
